# easy_dowload

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js  test.sh  webpack.config.js  快速开发指南.md
.github/: dependabot.yml
.github/workflows/: dependabot.yml  docker-build.yml  release.yml  security.yml  test.yml
01frontend/: package-lock.json  package.json  webpack.config.js
01frontend/src/: manifest.json
01frontend/src/background/: background.js
01frontend/src/content/: content.js
01frontend/src/popup/: popup.html  popup.js
01frontend/src/shared/: api-client.js  server-dialog.js
02backend/: main.py  pyproject.toml  run.sh  test.sh
02backend/src/application/handlers/: error_handler.py
02backend/src/application/services/: config_manager.py  history_manager.py  queue_manager.py
02backend/src/domain/models/: __init__.py  server_config.py  transfer_task.py
02backend/src/infrastructure/network/: __init__.py  sftp_client.py
02backend/src/interfaces/api/: api.py
02backend/static/: demo.html
02backend/tests/integration/: test_api_integration.py
02backend/tests/unit/application/services/: test_config_manager.py  test_history_manager.py
02backend/tests/unit/infrastructure/network/: test_sftp_client.py
02backend/tests/unit/interfaces/api/: test_api.py
docker/: .dockerignore  Dockerfile  README.md  build-local.sh  build.sh  docker-compose.yml  run.sh
docs/architecture/: easy-translate-系统架构设计文档-v1.0.md
docs/deployment/: GitHub-CI-CD-配置指南.md
docs/development/: 快速开发指南-backend.md  快速开发指南-frontend.md  快速开发指南.md
docs/feature/: Easy-Translate-容器化方案文档-v1.0.md  Easy-Translate-开发分阶段计划-v1.0.md  Easy-Translate-详细设计文档-v1.0.md  前端服务状态显示功能-详细设计文档-v1.0.md  前端适配后端.md
docs/requirements/: Easy-Translate-需求规格说明书-v1.0.md
src/: api.py  crypto_utils.py  file_downloader.py  main.py  manifest.json  models.py  sftp_client.py  storage.py
src/application/handlers/: error_handler.py
src/application/services/: __init__.py  config_manager.py  history_manager.py  queue_manager.py
src/background/: background.js
src/content/: content.css  content.js
src/domain/models/: __init__.py  server_config.py  transfer_task.py
src/infrastructure/crypto/: __init__.py  crypto_utils.py
src/infrastructure/network/: __init__.py  file_downloader.py  sftp_client.py
src/infrastructure/storage/: __init__.py  storage.py
src/interfaces/api/: __init__.py  api.py
src/popup/: popup.html  popup.js
src/shared/utils/: __init__.py
test/: demo.html
tests/integration/: test_api_integration.py
tests/unit/: test_api.py  test_crypto_utils.py  test_file_downloader.py  test_sftp_client.py  test_storage.py
tests/unit/application/handlers/: test_error_handler.py
tests/unit/application/services/: test_config_manager.py  test_history_manager.py  test_queue_manager.py
tests/unit/infrastructure/crypto/: test_crypto_utils.py
tests/unit/infrastructure/network/: test_file_downloader.py  test_sftp_client.py
tests/unit/infrastructure/storage/: test_storage.py
tests/unit/interfaces/api/: test_api.py
